# robot_arm_vision

./: .gitignore  README.md
src/arm_bringup/: package.xml  setup.cfg  setup.py
src/arm_bringup/launch/: arm_bringup.launch.py  arm_upper.launch.py  arm_upper_sim.launch.py  calibrate.launch.py
src/arm_controller_config/: CMakeLists.txt  package.xml
src/arm_controller_config/config/: arm_controllers.yaml
src/arm_controller_config/launch/: arm_controller.launch.py
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/launch/: display.launch.py
src/arm_description/rviz/: arm_view.rviz
src/arm_hardware_interface/: CMakeLists.txt  package.xml  plugin.xml
src/arm_hardware_interface/include/arm_hardware_interface/: arm_system.hpp
src/arm_hardware_interface/src/: arm_system.cpp
src/arm_interfaces/: CMakeLists.txt  package.xml
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: joint_limits.yaml  ros2_controllers.yaml  xarm_robot.srdf
src/arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_planner/: package.xml  setup.cfg  setup.py
src/arm_planner/arm_planner/: planner_node.py
src/arm_planner/config/: planner_params.yaml
src/arm_planner/launch/: planner.launch.py
src/arm_vision/: package.xml  setup.cfg  setup.py
src/arm_vision/arm_vision/: detector_node.py  image_viewer.py  yolov8_detector.py  yolov8_node.py
src/arm_vision/config/: camera_params.yaml
src/arm_vision/launch/: vision.launch.py
